--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         <h2>Resultados</h2>
         <p><span>0</span><p>resultados</p>
     </section>
+    <button id="prox">proxima pagina</button>
+    <button id="comic">Ver comics</button>
+    <button id="char">Ver personajes</button>
+
     <section class="resultados"></section>
 
     <script src="index.js"></script>
