funciones a al select

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <div class="search-input">
                 <div class="earch-input-container">
                     <label for="search-type">TIPO</label>
-                    <select name="search-type" id="search-type">
-                        <option value="comics">COMICS</option>
-                        <option value="characters">PERSONAJES</option>
+                    <select class="select-type" name="search-type" id="search-type">
+                        <option class="selectComic" value="comics">COMICS</option>
+                        <option class="selectChar" value="characters">PERSONAJES</option>
                       </select>
                     <label for="search-type">ORDEN</label>
                     <select name="search-sort" id="search-sort">                  
