--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <option class="selectChar" value="characters">PERSONAJES</option>
                       </select>
                     <label for="search-type">ORDEN</label>
-                    <select name="search-sort" id="search-sort">                  
+                    <select class="selectSearch" name="search-sort" id="search-sort">                  
                         <option value="title">A-Z</option>
                         <option value="-title">Z-A</option>
                         <option value="-focDate">Más nuevos</option>
