--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- no dejes clases vacias -->
     <header class="">
         <div class="principal-title">
             <h1>ADA COMICS</h1>
@@ -68,6 +69,8 @@
     </main>
 
     <div class="botonesFlecha">
+        <!-- // si les agregas aria hidden a estos botones, un lector de pantalla no los menciona!
+        aria hidden es solo para elementos decorativos, no funcionales -->
         <button type="button" id="start" class="primeraPagina botonFlecha" disabled="">
             <i class="fas fa-angle-double-left" aria-hidden="true"></i>
         </button>
@@ -82,7 +85,7 @@
         </button>
     </div>
 
-    
+    <!-- // falta el footer! -->
 
 
     <script src="index.js"></script>
